<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main_orange"
    tools:context=".activity.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="32sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sheet_white"
        android:gravity="center|top"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_an_account"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textSize="23sp"
                android:layout_marginTop="15dp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_to_continue"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:layout_marginTop="15dp"
                android:textColor="@color/black"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="55dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/et_stroke"
                    android:inputType="textPersonName"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textStyle="normal"
                    android:textAllCaps="false"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:layout_marginTop="15dp"
                android:textColor="@color/black"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="55dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/et_stroke"
                    android:inputType="textEmailAddress"
                    android:autofillHints="emailAddress"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textStyle="normal"
                    android:textAllCaps="false"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:layout_marginTop="15dp"
                android:textColor="@color/black"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/et_stroke"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textStyle="normal"
                    android:textAllCaps="false"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/btn_rounded_corner_green"
            app:backgroundTint="@null"
            android:textAllCaps="false"
            android:textStyle="normal"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:text="@string/get_started"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_marginBottom="30dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textSize="18sp"
                android:gravity="end|center_vertical"
                android:layout_margin="10dp"
                android:text="@string/already_have_an_account"/>

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="#2196F3"
                android:gravity="center_vertical|center"
                android:text="@string/login"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>